After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 733495 - uridecodebin/playbin: Does not properly do async state changes
uridecodebin/playbin: Does not properly do async state changes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal blocker
: 1.5.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
: 733596 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2014-07-21 11:49 UTC by Sebastian Dröge (slomo)
Modified: 2014-07-23 12:33 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Sebastian Dröge (slomo) 2014-07-21 11:49:40 UTC
It's probably my recent decodebin changes. Sink is waiting to pre-roll, decoders does ALLOCATION query but that is never answered because the sink is waiting to pre-roll. And as discoverer never goes to PLAYING it never will pre-roll.

Maybe happens because now we start the decoders earlier than before, and due to linking things further downstream after starting it will try to reconfigure.




Comment 1 Isaac Smith 2014-07-22 18:12:01 UTC
I have what seems to be a related problem, uridecodebin hangs on the first frame of any file (i.e "uridecodebin file://video.mp4 ! autovideosink") with the line "Redistributing latency...". The same files work fine with playbin and filesrc ! decodebin. Is this the same bug?
Comment 2 Sebastian Dröge (slomo) 2014-07-22 19:55:21 UTC
Probably not. Does it happen with 1.5, i.e. latest git master? If not please file a separate bug for that :)
Comment 3 Sebastian Dröge (slomo) 2014-07-22 19:55:44 UTC
I mean "*only* with 1.5 / git master"
Comment 4 Isaac Smith 2014-07-22 21:30:26 UTC
uridecodebin worked properly for me until I updated to git master recently, I'm not sure what revision I was on previously. My issue happens with any media file, not just a specific one.
Comment 5 Tim-Philipp Müller 2014-07-23 08:57:36 UTC
*** Bug 733596 has been marked as a duplicate of this bug. ***
Comment 6 Sebastian Dröge (slomo) 2014-07-23 10:49:13 UTC
commit 73646bd04f4755ae3709ae4bd10b122e74358711
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Jul 23 12:36:15 2014 +0200

    playbin: Go asynchronously from READY to PAUSED
    
    We now add all our elements to uridecodebin *after*
    GstBin::change_state(READY->PAUSED), so we need to post async-start
    and async-done messages ourselves if we want to work async.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733495

commit 5c038192e25e6bfc68de326d6f249592b9532cd5
Author: Sebastian Dröge <sebastian@centricular.com>
Date:   Wed Jul 23 12:27:36 2014 +0200

    uridecodebin: Go asynchronously from READY to PAUSED
    
    We now add all our elements to uridecodebin *after*
    GstBin::change_state(READY->PAUSED), so we need to post async-start
    and async-done messages ourselves if we want to work async.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=733495
Comment 7 Isaac Smith 2014-07-23 12:33:30 UTC
The commit fixed my issue, thanks!